--- a/src/widgets/discount/assets/src/discount-conditions.css
+++ b/src/widgets/discount/assets/src/discount-conditions.css
@@ -15,8 +15,23 @@
     padding: 15px 15px 15px 35px;
     border-radius: 5px;
 }
+/*
 
 .sx-discount-conditions a {
     text-decoration: none;
     border-bottom: 1px dashed;
+}*/
+
+
+.sx-discount-conditions .sx-rules {
+    padding: 10px 0px;
+}
+
+.sx-discount-conditions .sx-remove-wrapper {
+    display: none;
+}
+
+.sx-discount-conditions .sx-row:hover>.sx-conditions>.row>.sx-remove-wrapper,
+.sx-discount-conditions .sx-row:hover>.row>.sx-remove-wrapper {
+    display: block;
 }
