--- a/src/cashier/assets/src/css/cashier.css
+++ b/src/cashier/assets/src/css/cashier.css
@@ -1626,3 +1626,59 @@ body i.icon {
     text-shadow: none;
     background-image: none;
 }
+
+
+
+/**
+ * Отрисовка чека
+ */
+
+.sx-view-check .sx-row {
+    display: flex;
+    justify-content: space-between;
+}
+.sx-view-check .sx-check-results {
+    margin-bottom: 10px;
+}
+.sx-view-check .sx-postions-table {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.sx-view-check .sx-postions-table td,
+.sx-view-check .sx-postions-table th
+{
+    border-top: none !important;
+}
+.sx-view-check .sx-postions-table tbody+tbody {
+    border-top: none;
+}
+
+.sx-view-check .sx-check-head-data .sx_seller_address {
+    font-weight: bold;
+    font-size: 18px;
+}
+.sx-view-check .sx-check-head-data .sx-kkm_payments_address {
+    font-weight: bold;
+    font-size: 18px;
+}
+.sx-view-check .sx-check-head-data .sx-seller_name {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.sx-view-check .sx-check-head-data {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.sx-view-check .sx-qr-wrapper {
+    margin-top: 10px;
+}
+.sx-view-check {
+    max-width: 400px;
+}
+.sx-chec-status {
+    margin-bottom: 10px;
+}
