--- a/src/cashier/assets/src/css/cashier.css
+++ b/src/cashier/assets/src/css/cashier.css
@@ -1,3 +1,7 @@
+/**
+ * Переопределние базовых стилей
+ */
+
 html, html body {
     font-size: 14px;
     /*font-family: 'Nunito';*/
@@ -18,6 +22,17 @@ a:hover {
     text-decoration: none;
 }
 
+/**
+ * Формы
+ */
+.form-control:focus {
+    box-shadow: none;
+}
+.input-group-text {
+    background-color: #f8f8f8;
+}
+
+
 
 .btn:visited,
 .btn:active,
@@ -34,6 +49,11 @@ button, h1, h2, h3, h4, h5 {
     font-weight: 400;
 }
 
+
+
+/**
+ * Верстка проекта
+ */
 .sx-content-wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1329,7 +1349,13 @@ body i.icon {
 .sx-order-result-block {
     padding: 10px 20px !important;
 }
-
+.sx-order-result-block-visible {
+    padding: 10px 20px !important;
+}
+.sx-order-result-total-percent {
+    border-bottom: 1px dashed;
+    cursor: pointer;
+}
 
 
 @keyframes blink {
@@ -1712,4 +1738,124 @@ body i.icon {
 }
 .sx-chec-status {
     margin-bottom: 10px;
+}
+
+/**
+ * Редактирование order item
+ */
+.edit-order-item-head {
+    padding: 20px;
+    display: -webkit-box !important;
+    display: -webkit-flex !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: left !important;
+}
+.edit-order-item-head .sx-title {
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    margin: 0 0 0 15px;
+    overflow: hidden;
+}
+.edit-order-item-head .sx-title h4 {
+    margin: 0;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    overflow: hidden;
+    word-break: break-word;
+    font-weight: 500;
+    max-height: 60px;
+}
+.edit-order-item-head .sx-title span {
+    color: rgba(0,0,0,0.5);
+    display: block;
+    margin-bottom: 2px;
+}
+
+.edit-order-item-content {
+    padding: 10px 20px;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    overflow-y: auto;
+}
+
+.edit-order-item-footer .sx-close-modal{
+    position: relative;
+    top: 0;
+    /* text-align: right; */
+    margin: 0;
+    right: 0;
+}
+.edit-order-item-footer {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.sx-order-item-total strong {
+    margin-left: 10px;
+    margin-right: 0px;
+}
+.sx-order-item-total {
+    font-size: 1.8em;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    opacity: 0.6;
+}
+
+
+.sx-quantity-input > .button {
+    margin: 0;
+    width: 47px;
+    padding: 10px;
+}
+.sx-quantity-input .red.button {
+    box-shadow: inset 0 0 0 1px #db2828!important;
+    color: #db2828!important;
+}
+.sx-quantity-input .green.button {
+    box-shadow: inset 0 0 0 1px #21ba45!important;
+    color: #21ba45!important;
+}
+
+.edit-order-item-content .form-control {
+    height: 50px;
+}
+.sx-order-item-total-money-amount {
+    position: relative;
+    opacity: 0.5;
+    font-size: 20px;
+}
+.sx-order-item-total-money-amount:before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 50%;
+    right: 0;
+    border-top: 1px solid;
+    border-color: inherit;
+    -webkit-transform: rotate(-8deg);
+    -moz-transform: rotate(-8deg);
+    -ms-transform: rotate(-8deg);
+    -o-transform: rotate(-8deg);
+    transform: rotate(-8deg);
 }
