--- a/src/cashier/assets/src/css/cashier.css
+++ b/src/cashier/assets/src/css/cashier.css
@@ -25,6 +25,8 @@ a:hover {
 /**
  * Формы
  */
+
+
 .form-control:focus {
     box-shadow: none;
 }
@@ -32,6 +34,18 @@ a:hover {
     background-color: #f8f8f8;
 }
 
+.btn {
+    font-size: 1.42857143rem;
+    padding: 0.5em 1.5em;
+    border: none;
+}
+
+.btn-primary {
+    background-color: #2185d0;
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
+}
 
 
 .btn:visited,
@@ -1016,6 +1030,10 @@ body i.icon {
     margin-top: 10px;
     border-radius: 8px;
 }
+.error-summary ul {
+    padding-left: 17px;
+    margin-bottom: 0;
+}
 .sx-no-order-items img {
     position: absolute;
     top: 15px;
@@ -1858,4 +1876,109 @@ body i.icon {
     -ms-transform: rotate(-8deg);
     -o-transform: rotate(-8deg);
     transform: rotate(-8deg);
+}
+
+
+/**
+ * Создание клиента
+ */
+.sx-create-user-wrapper {
+    position: fixed;
+    right: -40%;
+    top: 0;
+    background: white;
+    width: 100%;
+    z-index: 1;
+    width: 40%;
+    max-width: 600px;
+    transition: 0.3s ease-in-out;
+    background-color: #fff;
+    border-left: 1px solid rgba(60,60,67,.286);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.sx-create-user-wrapper .sx-create-header {
+    display: flex;
+    height: 60px;
+    flex-basis: 60px;
+    background: rgb(243, 243, 243);
+}
+.sx-create-user-wrapper .sx-create-header {
+    display: flex;
+    height: 60px;
+    flex-basis: 60px;
+    background: rgb(243, 243, 243);
+}
+.sx-create-user-wrapper .sx-create-header .action:hover{
+    opacity: 0.8;
+    background: #e9e9e9;
+}
+
+.sx-create-user-wrapper .sx-create-header .content {
+    font-size: 18px;
+    flex: 1 1 0%;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+.sx-create-user-wrapper .sx-create-header .action {
+    width: 60px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.sx-create-user-wrapper .sx-create-body {
+    overflow-y: auto;
+    padding: 20px;
+    flex: 1 1 0%;
+}
+.sx-create-user-wrapper .sx-create-footer {
+    background-color: rgb(240, 240, 240);
+    padding: 10px;
+}
+
+
+/**
+ * Настройка форм
+ */
+.sx-cashier-edit-form .form-control {
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 0;
+
+    display: block;
+    width: 100%;
+    border-top-style: initial;
+    border-right-style: initial;
+    border-left-style: initial;
+    border-top-color: initial;
+    border-right-color: initial;
+    border-left-color: initial;
+    height: 60px;
+    font-size: 20px;
+    border-width: 0px 0px 1px;
+    border-image: initial;
+    padding: 10px;
+    outline: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.sx-cashier-edit-form .form-group label {
+    font-size: 1.8em;
+    font-weight: 400;
+    color: rgb(51, 51, 51);
+    margin: 0;
+}
+.sx-cashier-edit-form .form-group {
+    margin-bottom: 25px;
+}
+.sx-cashier-edit-form .error-summary {
+    margin-bottom: 10px;
+    margin-top: 0;
 }
